# CPU-Miner

./: Dockerfile  Makefile.am  README.md  algo-gate-api.c  algo-gate-api.h  api.c  configure  cpu-miner.c  cpuminer-conf.json  miner.h  nomacro.pl  simd-utils.h  util.c
